# keycloak-poc

./: .gitignore
keycloak_be_poc/: .dev.env  .test.env  README.md  build_docker_image.sh  deploy_docker_compose.sh  deploy_infrastructure.sh  pyproject.toml  run_dev_server.sh  tear_down_docker_compose.sh
keycloak_be_poc/deployment/docker/: Dockerfile
keycloak_be_poc/deployment/docker-compose/: docker-compose.yml
keycloak_be_poc/git-hooks/: README.md  pre-commit  pre-push  set-hooks.sh
keycloak_be_poc/keycloak_be_poc/entrypoint/: app.py
keycloak_be_poc/keycloak_be_poc/entrypoint/items/: health_item.py
keycloak_be_poc/keycloak_be_poc/entrypoint/routers/: health_router.py  helloworld_router.py
keycloak_be_poc/postman/: aggregate1.postman_collection.json
keycloak_fe_poc/: README.md  angular.json  package-lock.json  package.json  realm-export.json
keycloak_fe_poc/src/: index.html  styles.css
keycloak_fe_poc/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  auth-config.ts
keycloak_fe_poc/src/app/core/: authentication.service.ts
keycloak_fe_poc/src/app/front-page/front-page/: front-page.component.html  front-page.component.ts
keycloak_fe_poc/src/app/guards/: authentication.guard.ts
keycloak_fe_poc/src/app/home/home/: home.component.html  home.component.ts
keycloak_fe_poc/src/app/launch-page/launch-page/: launch-page.component.html  launch-page.component.ts
keycloak_fe_poc/src/app/shared/navbar/: navbar.component.html  navbar.component.ts
