[tool.poetry]
name = "keycloak_be_poc"
version = "0.1.0"
description = "Keycloak BE POC"
authors = ['Andres <amunoz@gradiant.org>']

[tool.poetry.dependencies]
python = "3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
pydantic = "^1.9.0"
pymongo = "^4.0.1"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
